--- a/EPR/Views/Shared/_Layout.cshtml
+++ b/EPR/Views/Shared/_Layout.cshtml
@@ -181,7 +181,7 @@
             <!-- Brand Logo -->
             <a href="index3.html" class="brand-link">
                 <img src="~/AdminLTE/dist/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
-                <span class="brand-text font-weight-light">AdminLTE 3</span>
+                <span class="brand-text font-weight-light">EPR</span>   
             </a>
 
             <!-- Sidebar -->
@@ -192,7 +192,7 @@
                         <img src="~/AdminLTE/dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
                     </div>
                     <div class="info">
-                        <a href="#" class="d-block">Alexander Pierce</a>
+                        <a href="#" class="d-block">Admin</a>
                     </div>
                 </div>
 
@@ -251,7 +251,7 @@
                         </a>
                         <ul class="nav nav-treeview">
                             <li class="nav-item">
-                                <a href="pages/tables/simple.html" class="nav-link">
+                                <a asp-action="Index" asp-controller="LeaveTypes" class="nav-link">
                                     <i class="far fa-circle nav-icon"></i>
                                     <p>Leave Types</p>
                                 </a>
@@ -270,6 +270,59 @@
                             </li>
                         </ul>
                     </li>
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">
+                                <i class="nav-icon fas fa-table"></i>
+                                <p>
+                                    System Administration
+                                    <i class="fas fa-angle-left right"></i>
+                                </p>
+                            </a>
+                            <ul class="nav nav-treeview">
+                                <li class="nav-item">
+                                    <a asp-action="Index" asp-controller="Designations" class="nav-link">
+                                        <i class="far fa-circle nav-icon"></i>
+                                        <p>Designations</p>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a asp-action="Index" asp-controller="Departments" class="nav-link">
+                                        <i class="far fa-circle nav-icon"></i>
+                                        <p>Departments</p>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a asp-action="Index" asp-controller="Banks" class="nav-link">
+                                        <i class="far fa-circle nav-icon"></i>
+                                        <p>Banks</p>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a asp-action="Index" asp-controller="Countries" class="nav-link">
+                                        <i class="far fa-circle nav-icon"></i>
+                                        <p>Countries</p>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a asp-action="Index" asp-controller="Cities" class="nav-link">
+                                        <i class="far fa-circle nav-icon"></i>
+                                        <p>Towns/Cities</p>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a asp-action="Index" asp-controller="SystemCodes" class="nav-link">
+                                        <i class="far fa-circle nav-icon"></i>
+                                        <p>System Code</p>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a asp-action="Index" asp-controller="SystemCodeDetails" class="nav-link">
+                                        <i class="far fa-circle nav-icon"></i>
+                                        <p>System Code Details</p>
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>
 
                    </ul>
                 </nav>
