--- a/EPR/Views/Shared/_Layout.cshtml
+++ b/EPR/Views/Shared/_Layout.cshtml
@@ -257,17 +257,12 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a href="pages/tables/simple.html" class="nav-link">
+                                <a asp-action="Index" asp-controller="LeaveApplications" class="nav-link">
                                     <i class="far fa-circle nav-icon"></i>
-                                    <p>Pending Applications</p>
+                                    <p>Leave Applications</p>
                                 </a>
                             </li>
-                            <li class="nav-item">
-                                <a href="pages/tables/simple.html" class="nav-link">
-                                    <i class="far fa-circle nav-icon"></i>
-                                    <p>Approved Applications</p>
-                                </a>
-                            </li>
+                            
                         </ul>
                     </li>
                         <li class="nav-item">
