--- a/EPR/Views/SystemCodeDetails/Index.cshtml
+++ b/EPR/Views/SystemCodeDetails/Index.cshtml
@@ -36,7 +36,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.ModifiedOn)
             </th>
-            <th></th>
+            <th>Edit</th>
+            <th>Details</th>
+            <th>Delete</th>
         </tr>
     </thead>
     <tbody>
