--- a/EPR/Views/LeaveApplications/Create.cshtml
+++ b/EPR/Views/LeaveApplications/Create.cshtml
@@ -12,89 +12,77 @@
     </div>
     <div class="card-body">
         <div class="row">
-             <div class="col-md-12">
-                    <form asp-action="Create">
-                        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-
+            <div class="col-md-12">
+                <form asp-action="Create">
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <div class="row">
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label asp-for="EmployeeId" class="control-label"></label>
                                 <select asp-for="EmployeeId" class="form-control" asp-items="ViewBag.EmployeeId"></select>
+                                <span asp-validation-for="EmployeeId" class="text-danger"></span>
                             </div>
                         </div>
-
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label asp-for="StartDate" class="control-label"></label>
                                 <input asp-for="StartDate" class="form-control" type="datetime-local" />
                                 <span asp-validation-for="StartDate" class="text-danger"></span>
                             </div>
-                         </div>
-                         <div class="col-md-6">
+                        </div>
+                        <div class="col-md-6">
                             <div class="form-group">
                                 <label asp-for="EndDate" class="control-label"></label>
                                 <input asp-for="EndDate" class="form-control" type="datetime-local" />
                                 <span asp-validation-for="EndDate" class="text-danger"></span>
                             </div>
                         </div>
-
                         <div class="col-md-6">
                             <div class="form-group">
-                            <label asp-for="NoOfDays" class="control-label"></label>
-                            <input asp-for="NoOfDays" class="form-control" />
-                            <span asp-validation-for="NoOfDays" class="text-danger"></span>
+                                <label asp-for="NoOfDays" class="control-label"></label>
+                                <input asp-for="NoOfDays" class="form-control" />
+                                <span asp-validation-for="NoOfDays" class="text-danger"></span>
                             </div>
                         </div>
-
                         <div class="col-md-6">
                             <div class="form-group">
-                            <label asp-for="DurationId" class="control-label"></label>
-                            <select asp-for="DurationId" class="form-control" asp-items="ViewBag.DurationId"></select>
+                                <label asp-for="DurationId" class="control-label"></label>
+                                <select asp-for="DurationId" class="form-control" asp-items="ViewBag.DurationId"></select>
+                                <span asp-validation-for="DurationId" class="text-danger"></span>
                             </div>
-                        </div">
-
-
+                        </div>
                         <div class="col-md-6">
                             <div class="form-group">
-                            <label asp-for="LeaveTypeId" class="control-label"></label>
-                            <select asp-for="LeaveTypeId" class="form-control" asp-items="ViewBag.LeaveTypeId"></select>
-                             </div>
+                                <label asp-for="LeaveTypeId" class="control-label"></label>
+                                <select asp-for="LeaveTypeId" class="form-control" asp-items="ViewBag.LeaveTypeId"></select>
+                                <span asp-validation-for="LeaveTypeId" class="text-danger"></span>
+                            </div>
                         </div>
-
-                        <!-- Attachment -->
                         <div class="col-md-6">
-                        <div class="form-group">
-                            <label asp-for="Attachment" class="control-label"></label>
-                            <input asp-for="Attachment" class="form-control" />
-                            <span asp-validation-for="Attachment" class="text-danger"></span>
+                            <div class="form-group">
+                                <label asp-for="Attachment" class="control-label"></label>
+                                <input asp-for="Attachment" class="form-control" />
+                                <span asp-validation-for="Attachment" class="text-danger"></span>
+                            </div>
                         </div>
-                        </div>
-
-                        <!-- Description -->
                         <div class="col-md-6">
-                        <div class="form-group">
-                            <label asp-for="Description" class="control-label"></label>
-                            <input asp-for="Description" class="form-control" />
-                            <span asp-validation-for="Description" class="text-danger"></span>
+                            <div class="form-group">
+                                <label asp-for="Description" class="control-label"></label>
+                                <input asp-for="Description" class="form-control" />
+                                <span asp-validation-for="Description" class="text-danger"></span>
+                            </div>
                         </div>
+                        <div class="col-md-12">
+                            <div class="form-group">
+                                <input type="submit" value="Create" class="btn btn-primary" />
+                            </div>
                         </div>
-
-
-                        <!-- Submit Button -->
-                        <div class="col-md-6">
-
-                        <div class="form-group">
-                            <input type="submit" value="Create" class="btn btn-primary" />
-                        </div>
-                        </div>
-
-                    </form>
-             </div>
+                    </div>
+                </form>
+            </div>
         </div>
     </div>
 </div>
-
-
 
 <div>
     <a asp-action="Index">Back to List</a>
